progress bar game

--- a/index.html
+++ b/index.html
@@ -2,10 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Progress bar - the game</title>
+  <title>The Infuriating Progress Bar Game</title>
   <meta content="width=device-width, initial-scale=1" name="viewport" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+  <meta property="og:title" content="The Infuriating Progress Bar Game">
+  <meta property="og:description" content="Have a play, you'll probably regret it">
+  <meta property="og:image" content="https://renduh.github.io/infuriating-progress-bar-game/social.jpg">
+  <meta property="og:url" content="https://renduh.github.io/infuriating-progress-bar-game/">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="og:site_name" content="The Infuriating Progress Bar Game">
+  <meta name="twitter:image:alt" content="The Infuriating Progress Bar Game">
   <style>
   html, body {
     width:100%;
